# tune-muse

./: .gitignore  CLAUDE.md  README.md
.specify/memory/: constitution.md
backend/: pyproject.toml  requirements.txt
backend/app/: .env.example  config.py  main.py
backend/app/api/: analyze.py  auth.py  sessions.py
backend/app/db/: database.py  queries.py
backend/app/knowledge_base/: directions.json
backend/app/models/: schemas.py
backend/app/services/: audio_extractor.py  auth.py  llm_client.py  recommendation.py  vocal_analyzer.py
backend/tests/contract/: test_analyze_contract.py
backend/tests/integration/: test_analyze.py  test_sessions.py
backend/tests/unit/: test_auth.py  test_recommendation.py  test_vocal_analyzer.py
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/AudioRecorder/: AudioRecorder.tsx
frontend/src/components/AudioUploader/: AudioUploader.tsx
frontend/src/components/Recommendations/: Recommendations.tsx
frontend/src/components/VocalProfile/: VocalProfile.tsx
frontend/src/components/common/: ErrorBoundary.tsx  (+1 more)
frontend/src/pages/: AnalysisPage.tsx  ComparePage.tsx  HistoryPage.tsx  HomePage.tsx
frontend/src/services/: api.ts  audioAnalyzer.ts  audioRecorder.ts  qualityChecker.ts
frontend/src/tokens/: design-tokens.css
frontend/src/types/: index.ts
specs/001-ai-music-recommend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-music-recommend/checklists/: requirements.md
specs/001-ai-music-recommend/contracts/: api.md
